fixed header spacing on non-links, added todo stub for loading from url

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -61,14 +61,15 @@ h2
     width: 25%
     text-align: right
     
-  a.button
+  .button
     display: inline-block
-    font-weight: bold
     color= !dark_gray
     padding: 1em
-    text-decoration: none
     &:hover
       background-color= !secondary_color_light
+    a
+      font-weight: bold
+      text-decoration: none
 
 .border
   border-color: black
